versioned_docs/version-5.2/client-api/operations/maintenance/indexes/set-index-lock.mdx
---
title: "Set Index Lock Mode Operation"
hide_table_of_contents: true
sidebar_label: Set Index Lock Mode
sidebar_position: 1
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "java", "nodejs"];


# Set Index Lock Mode Operation
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">

<Admonition type="note" title="Note">

* The lock mode controls the behavior of index modifications.  
  Use `SetIndexesLockOperation` to modify the __lock mode__ for a single index or multiple indexes.

* __Indexes scope__:  
  The lock mode can be set only for static-indexes, not for auto-indexes.

* __Nodes scope__:  
  The lock mode will be updated on all nodes in the database group.

* Setting the lock mode can also be done from the [indexes list view](../../../../studio/database/indexes/indexes-list-view.mdx#indexes-list-view---actions) in the Studio.  
  Locking an index is not a security measure, the index can be unlocked at any time.  

* In this page:
    * [Lock modes](../../../../client-api/operations/maintenance/indexes/set-index-lock.mdx#lock-modes)
    * [Sample usage flow](../../../../client-api/operations/maintenance/indexes/set-index-lock.mdx#sample-usage-flow)
    * [Set lock mode - single index](../../../../client-api/operations/maintenance/indexes/set-index-lock.mdx#set-lock-mode---single-index)
    * [Set lock mode - multiple indexes](../../../../client-api/operations/maintenance/indexes/set-index-lock.mdx#set-lock-mode---multiple-indexes)
    * [Syntax](../../../../client-api/operations/maintenance/indexes/set-index-lock.mdx#syntax)

</Admonition>
## Lock modes

* __Unlocked__ - when lock mode is set to `Unlock`:  
  * Any change to the index definition will be applied.  
  * If the new index definition differs from the one stored on the server,  
    the index will be updated and the data will be re-indexed using the new index definition.  
 
* __Locked (ignore)__ - when lock mode is set to `LockedIgnore`:  
  * Index definition changes will Not be applied.  
  * Modifying the index definition will return successfully and no error will be raised,  
    however, no change will be made to the index definition on the server.
 
* __Locked (error)__ - when lock mode is set to `LockedError`:  
  * Index definitions changes will Not be applied.  
  * An exception will be thrown upon trying to modify the index.  



## Sample usage flow

Consider the following scenario:

* Your client application defines and [deploys a static-index](../../../../client-api/operations/maintenance/indexes/put-indexes.mdx) upon application startup.
  
* After the application has started, you make a change to your index definition and re-indexing occurs.   
  However, if the index lock mode is _'Unlock'_, the next time your application will start,  
  it will reset the index definition back to the original version.

* Locking the index allows to make changes to the running index and prevents the application  
  from setting it back to the previous definition upon startup. See the following steps:  
<br/>

  1. Run your application  
  2. Modify the index definition on the server (from Studio, or from another application),  
     and then set this index lock mode to `LockedIgnore`.  
  3. A side-by-side replacement index is created on the server.  
     It will index your dataset according to the __new__ definition.  
  4. At this point, if any instance of your original application is started,  
     the code that defines and deploys the index upon startup will have no effect  
     since the index is 'locked'.  
  5. Once the replacement index is done indexing, it will replace the original index.  



## Set lock mode - single index

<Tabs groupId='languageSyntax'>
<TabItem value="Sync" label="Sync">
<CodeBlock language="csharp">
{`// Define the set lock mode operation
// Pass index name & lock mode
var setLockModeOp = new SetIndexesLockOperation("Orders/Totals", IndexLockMode.LockedIgnore);

// Execute the operation by passing it to Maintenance.Send
// An exception will be thrown if index does not exist
store.Maintenance.Send(setLockModeOp);

// Lock mode is now set to 'LockedIgnore'
// Any modifications done now to the index will Not be applied, and will Not throw
`}
</CodeBlock>
</TabItem>
<TabItem value="Async" label="Async">
<CodeBlock language="csharp">
{`// Define the set lock mode operation
// Pass index name & lock mode
var setLockModeOp = new SetIndexesLockOperation("Orders/Totals", IndexLockMode.LockedIgnore);

// Execute the operation by passing it to Maintenance.SendAsync
// An exception will be thrown if index does not exist
await store.Maintenance.SendAsync(setLockModeOp);

// Lock mode is now set to 'LockedIgnore'
// Any modifications done now to the index will Not be applied, and will Not throw
`}
</CodeBlock>
</TabItem>
</Tabs>



## Set lock mode - multiple indexes

<Tabs groupId='languageSyntax'>
<TabItem value="Sync" label="Sync">
<CodeBlock language="csharp">
{`// Define the index list and the new lock mode:
var parameters = new SetIndexesLockOperation.Parameters {
    IndexNames = new[] {"Orders/Totals", "Orders/ByCompany"}, 
    Mode = IndexLockMode.LockedError
};
    
// Define the set lock mode operation, pass the parameters
var setLockModeOp = new SetIndexesLockOperation(parameters);

// Execute the operation by passing it to Maintenance.Send
// An exception will be thrown if any of the specified indexes do not exist
store.Maintenance.Send(setLockModeOp);

// Lock mode is now set to 'LockedError' on both indexes
// Any modifications done now to either index will throw
`}
</CodeBlock>
</TabItem>
<TabItem value="Async" label="Async">
<CodeBlock language="csharp">
{`// Define the index list and the new lock mode:
var parameters = new SetIndexesLockOperation.Parameters {
    IndexNames = new[] {"Orders/Totals", "Orders/ByCompany"}, 
    Mode = IndexLockMode.LockedError
};

// Define the set lock mode operation, pass the parameters
var setLockModeOp = new SetIndexesLockOperation(parameters);
                
// Execute the operation by passing it to Maintenance.SendAsync
// An exception will be thrown if any of the specified indexes do not exist
await store.Maintenance.SendAsync(setLockModeOp);

// Lock mode is now set to 'LockedError' on both indexes
// Any modifications done now to either index will throw
`}
</CodeBlock>
</TabItem>
</Tabs>



## Syntax

<TabItem value="syntax_1" label="syntax_1">
<CodeBlock language="csharp">
{`// Available overloads:
public SetIndexesLockOperation(string indexName, IndexLockMode mode);
public SetIndexesLockOperation(Parameters parameters);
`}
</CodeBlock>
</TabItem>

| Parameters | Type | Description |
|- | - | - |
| __indexName__ | string | Index name for which to set lock mode |
| __mode__ | `IndexLockMode` | Lock mode to set |
| __parameters__ | `SetIndexesLockOperation.Parameters` | List of indexes + Lock mode to set.<br/>An exception is thrown if any of the specified indexes do not exist. |

<TabItem value="syntax_2" label="syntax_2">
<CodeBlock language="csharp">
{`public enum IndexLockMode
\{
    Unlock,
    LockedIgnore,
    LockedError
\}
`}
</CodeBlock>
</TabItem>

<TabItem value="syntax_3" label="syntax_3">
<CodeBlock language="csharp">
{`public class Parameters
\{
    public string[] IndexNames \{ get; set; \}
    public IndexLockMode Mode \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>




</LanguageContent>
<LanguageContent language="java">


**SetIndexesLockOperation**  allows you to change index lock mode for a given index or indexes.

## Syntax

<TabItem value="set_lock_mode_1" label="set_lock_mode_1">
<CodeBlock language="java">
{`public SetIndexesLockOperation(String indexName, IndexLockMode mode)
public SetIndexesLockOperation(SetIndexesLockOperation.Parameters parameters)
`}
</CodeBlock>
</TabItem>

<TabItem value="set_lock_mode_2" label="set_lock_mode_2">
<CodeBlock language="java">
{`public enum IndexLockMode \{
    UNLOCK,
    LOCKED_IGNORE,
    LOCKED_ERROR
\}
`}
</CodeBlock>
</TabItem>

<TabItem value="set_lock_mode_3" label="set_lock_mode_3">
<CodeBlock language="java">
{`public static class Parameters \{
    private String[] indexNames;
    private IndexLockMode mode;

    public String[] getIndexNames() \{
        return indexNames;
    \}

    public void setIndexNames(String[] indexNames) \{
        this.indexNames = indexNames;
    \}

    public IndexLockMode getMode() \{
        return mode;
    \}

    public void setMode(IndexLockMode mode) \{
        this.mode = mode;
    \}
\}
`}
</CodeBlock>
</TabItem>

| Parameters | | |
| ------------- | ------------- | ----- |
| **name** | String | name of an index to change lock mode for |
| **lockMode** | IndexLockMode | new index lock mode |
| **parameters** | SetIndexesLockOperation.Parameters | list of indexes + new index lock mode |

## Example I

<TabItem value="set_lock_mode_4" label="set_lock_mode_4">
<CodeBlock language="java">
{`store.maintenance().send(new SetIndexesLockOperation("Orders/Totals", IndexLockMode.LOCKED_IGNORE));
`}
</CodeBlock>
</TabItem>

## Example II

<TabItem value="set_lock_mode_5" label="set_lock_mode_5">
<CodeBlock language="java">
{`SetIndexesLockOperation.Parameters parameters = new SetIndexesLockOperation.Parameters();
parameters.setIndexNames(new String[]\{ "Orders/Totals", "Orders/ByCompany" \});
parameters.setMode(IndexLockMode.LOCKED_IGNORE);

store.maintenance().send(new SetIndexesLockOperation(parameters));
`}
</CodeBlock>
</TabItem>


</LanguageContent>
<LanguageContent language="nodejs">

<Admonition type="note" title="Note">

* The lock mode controls the behavior of index modifications.  
  Use `SetIndexesLockOperation` to modify the __lock mode__ for a single index or multiple indexes.

* __Indexes scope__:  
  The lock mode can be set only for static-indexes, not for auto-indexes.

* __Nodes scope__:  
  The lock mode will be updated on all nodes in the database group.

* Setting the lock mode can also be done from the [indexes list view](../../../../studio/database/indexes/indexes-list-view.mdx#indexes-list-view---actions) in the Studio.  
  Locking an index is not a security measure, the index can be unlocked at any time.  

* In this page:
    * [Lock modes](../../../../client-api/operations/maintenance/indexes/set-index-lock.mdx#lock-modes)
    * [Sample usage flow](../../../../client-api/operations/maintenance/indexes/set-index-lock.mdx#sample-usage-flow)
    * [Set lock mode - single index](../../../../client-api/operations/maintenance/indexes/set-index-lock.mdx#set-lock-mode---single-index)
    * [Set lock mode - multiple indexes](../../../../client-api/operations/maintenance/indexes/set-index-lock.mdx#set-lock-mode---multiple-indexes)
    * [Syntax](../../../../client-api/operations/maintenance/indexes/set-index-lock.mdx#syntax)

</Admonition>
## Lock modes

* __Unlocked__ - when lock mode is set to `Unlock`:  
  * Any change to the index definition will be applied.  
  * If the new index definition differs from the one stored on the server,  
    the index will be updated and the data will be re-indexed using the new index definition.  
 
* __Locked (ignore)__ - when lock mode is set to `LockedIgnore`:  
  * Index definition changes will Not be applied.  
  * Modifying the index definition will return successfully and no error will be raised,  
    however, no change will be made to the index definition on the server.
 
* __Locked (error)__ - when lock mode is set to `LockedError`:  
  * Index definitions changes will Not be applied.  
  * An exception will be thrown upon trying to modify the index.  



## Sample usage flow

Consider the following scenario:

* Your client application defines and [deploys a static-index](../../../../client-api/operations/maintenance/indexes/put-indexes.mdx) upon application startup.
  
* After the application has started, you make a change to your index definition and re-indexing occurs.   
  However, if the index lock mode is _'Unlock'_, the next time your application will start,  
  it will reset the index definition back to the original version.

* Locking the index allows to make changes to the running index and prevents the application  
  from setting it back to the previous definition upon startup. See the following steps:  
<br/>

  1. Run your application  
  2. Modify the index definition on the server (from Studio, or from another application),  
     and then set this index lock mode to `LockedIgnore`.  
  3. A side-by-side replacement index is created on the server.  
     It will index your dataset according to the __new__ definition.  
  4. At this point, if any instance of your original application is started,  
     the code that defines and deploys the index upon startup will have no effect  
     since the index is 'locked'.  
  5. Once the replacement index is done indexing, it will replace the original index.  



## Set lock mode - single index

<TabItem value="set_lock_single" label="set_lock_single">
<CodeBlock language="js">
{`// Define the set lock mode operation
// Pass index name & lock mode
const setLockModeOp = new SetIndexesLockOperation("Orders/Totals", "LockedIgnore");

// Execute the operation by passing it to maintenance.send
// An exception will be thrown if index does not exist
await store.maintenance.send(setLockModeOp);

// Lock mode is now set to 'LockedIgnore'
// Any modifications done now to the index will Not be applied, and will Not throw
`}
</CodeBlock>
</TabItem>



## Set lock mode - multiple indexes

<TabItem value="set_lock_multiple" label="set_lock_multiple">
<CodeBlock language="js">
{`// Define the index list and the new lock mode:
const parameters = \{
    indexNames: ["Orders/Totals", "Orders/ByCompany"],
    mode: "LockedError"
\}

// Define the set lock mode operation, pass the parameters
const setLockModeOp = new SetIndexesLockOperation(parameters);

// Execute the operation by passing it to maintenance.send
// An exception will be thrown if any of the specified indexes do not exist
await store.maintenance.send(setLockModeOp);

// Lock mode is now set to 'LockedError' on both indexes
// Any modifications done now to either index will throw
`}
</CodeBlock>
</TabItem>



## Syntax

<TabItem value="syntax_1" label="syntax_1">
<CodeBlock language="js">
{`// Available overloads:
const setLockModeOp = new SetIndexesLockOperation(indexName, mode);
const setLockModeOp = new SetIndexesLockOperation(parameters);
`}
</CodeBlock>
</TabItem>

| Parameters | Type | Description |
|- | - | - |
| __indexName__ | string | Index name for which to set lock mode |
| __mode__ | `"Unlock"` /<br/> `"LockedIgnore"` /<br/> `"LockedError"` | Lock mode to set |
| __parameters__ | parameters object | List of indexes + lock mode to set.<br/>An exception is thrown if any of the specified indexes do not exist. |

<TabItem value="syntax_2" label="syntax_2">
<CodeBlock language="js">
{`// parameters object
\{
    indexNames, // string[], list of index names
    mode        // Lock mode to set
\}
`}
</CodeBlock>
</TabItem>




</LanguageContent>

<!---
### Indexes
- [What are Indexes](../../../../indexes/what-are-indexes)
- [Creating and Deploying Indexes](../../../../indexes/creating-and-deploying)

### Server
- [Index Administration](../../../../indexes/index-administration)

### Operations
- [How to Change Index Priority](../../../../client-api/operations/maintenance/indexes/set-index-priority)


-->